test/negative/char1.mli

val f: char -> unit
(*@ f c
    requires c = '\' *)
