test/negative/char1.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : char -> unit[@@gospel {| f c
    requires c = '\' |}]
File "char1.mli", line 4, characters 17-18:
Error: illegal character '
